--- a/view/tutorial/intro.html
+++ b/view/tutorial/intro.html
@@ -4,12 +4,18 @@
     <p>本章内容将对公司的PM工作进行一个大概的阐述，详细的PPT文档存放在assets/document/PM's Training.ppt中。</p>
     <p>Cidana的项目经理职责将被大致划分为如下几个范畴：</p>
     <ul style="margin-left:2rem;">
-        <li>我们的项目产出什么-了解公司产品（product management)</li>
+        <li>我们的项目产出什么-了解公司产品(product management)</li>
         <ul>
             <li>产品的定义</li>
             <li>产品的宣传</li>
+            <li>产品的开发</li>
         </ul>
         <li>我们如何获得项目-市场开拓(Business Development)</li>
+        <ul>
+            <li>NDA的签订</li>
+            <li>客户需求沟通确认，产出SOW书</li>
+            <li>合同签订的注意事项，产出Agreement/Amendment</li>
+        </ul>
         <li>我们如何管理项目-项目管理(Project Management)</li>
         <ul>
             <li>Accounts Management</li>
@@ -29,6 +35,9 @@
     </ul>
 
 
-    <h3>Cidana 产品概览</h3>
+    <h3>Cidana PM使用工具概览</h3>
+    <p>等待更新</p>
+
+    <h3>Cidana PM常用账号</h3>
     <p>等待更新</p>
 </div>
