--- a/view/tutorial/product.html
+++ b/view/tutorial/product.html
@@ -1,11 +1,11 @@
-<h1>PM工作概述</h1>
+<h1>CIDANA 产品概述</h1>
 
 <div class="contents">
     <p>本公司的产品主要围绕音视频码流的编解码与传输的研究而展开，目前围绕着音、视频码流的编解码技术，我们向市场提供开发测试、DTV播放器等等产品。</p>
-    <p>主要的产品分为如下四类：</p>
+    <p>根据一个码流的<b>编制、传输、解压</b>以及解码器的<b>性能维护</b>等码流的不同生命阶段，CIDANA的产品分为如下四类：</p>
     <ul style="margin-left:2rem;">
         <li><b>音视频解码器</b>
-            <p>对一切有音视频解码器需求的硬件提供软件层面的音视频流解码定制，如耳机、车基播放器、收音机等等。</p>
+            <p>对一切有音视频解码器需求的硬件提供软件层面的音视频流解码定制、和硬件解码的整合，曾经支持的设备包括耳机、车基播放器、收音机等等。</p>
             </li>
         <li><b>DTV Player</b>
             <p>针对世界各地的无线电视机传播码流进行接收与解码，并提供播放器UI在硬件上进行整合。</p>
@@ -15,6 +15,10 @@
             </li>
         <li><b>Unitests&TFS</b>
             <p>针对音视频编解码器开发者提供的单元测试&测试结果框架服务，可以为codec developers 开发出符合市场需求的codecs提供便利。</p>
+            <ul style="margin-top:1rem;margin-left:1rem;">
+                <li>Unitest：我们对有需求的编解码器开发者提供单元测试代码与相应的维护服务，节省编解码器开发公司的成本</li>
+                <li>Test Frame：是一个针对编解码器开发者的单元测试框架，开发者可以通过该框架轻松地完成编解码器的单元测试、性能分析等。</li>
+            </ul>
             </li>
     </ul>
 </div>
