--- a/view/tutorial/productdtv.html
+++ b/view/tutorial/productdtv.html
@@ -2,6 +2,7 @@
 
 <div class="contents">
     <p>DTV，数据电视播放器，是公司的主营业务之一，目前该产品涉及到的项目有Eachin(浥晨）等厂商。</p>
+    <p>CIDANA的DTV使用standard plan和premium plan的商业模式，具体细节请参阅3.2.1一节。</p>
     <p>本文档中将先后介绍<a href="#DTVType">DTV播放器的类型</a>、<a href="#DTVDecoders">不同类型使用的解码器</a>及其相对应的注意事项，以及相关的UI资源版本等等</p>
 
     <h3 id="DTVType">&nbspDTV的类型&nbsp</h3>
@@ -10,7 +11,7 @@
     <p style="margin-left:3rem;">来源：<a href="https://www.vcan.cc/support/worldwide-digital-tv-receiver.html">https://www.vcan.cc/support/worldwide-digital-tv-receiver.html</a></p>
 
     <p>本公司主营业务地区：</p>
-    <table style="margin-left:3rem;">
+    <table style="margin-left:8rem;">
         <tr><td>DTV名称</td><td>国家与地区</td><td>分支版本</td></tr>
         <tr>
             <td>ISDB-T Player</td>
@@ -46,7 +47,7 @@
             <td>DVB-T2 Player</td>
             <td style="max-width:16rem;">泰国Thailand、印度India、印尼Indonesia、俄罗斯Russia、瑞典Sweden。芬兰Finland、英国UK、哥伦比亚Colombia 新加坡Singapore 越南Vietnam </td>
             <td><ul>
-                <li>H.265</li>
+                <li>H.265 supported</li>
                 <li>普通</li>
             </ul></td>
         </tr>
@@ -54,7 +55,7 @@
 
 
     <h3 id="DTVDecoders">&nbspDTV的解码器构成&nbsp</h3>
-    <p>请参照下表对照不同的DTV播放器使用的解码器，并在对客户提供的SOW说明书中阐明:</p>
+    <p>请参照下表对照不同的DTV播放器使用的解码器，并在对客户提供的SOW说明书中阐明客户所购买的相应解码器的:</p>
     <table style="margin-left:3rem;">
         <tr>
             <td>播放器名称</td>
