--- a/view/tutorial.html
+++ b/view/tutorial.html
@@ -25,40 +25,53 @@
     }
 
 </script>
+<style>
+    li {
+        position:relative;
+    }
+    li >button{
+        position:absolute;
+        left:-1.5rem;
+        bottom:0;
+    }
+</style>
 <body>
 <div id="blog">
     <div id="guide" style="width:0;">
-        <ul>
-            <li class="noBtn"><a href="/tutorial/intro">1. PM工作概述</a></li>
+        <ul style="margin-left:2rem;">
+            <li><a href="/tutorial/intro">1. PM工作概述</a></li>
             <ul>
-                <li class="noBtn"><a href="/tutorial/introTool">1.1 PM相关工具</a></li>
-                <li class="noBtn"><a href="/tutorial/introAccount">1.2 PM常用账号工具一栏</a></li>
-                <li class="noBtn"><a href="/tutorial/introMeeting">1.3 PM参加会议一览</a></li>
+                <li><a href="/tutorial/introTool">1.1 PM相关工具</a></li>
+                <li><a href="/tutorial/introAccount">1.2 PM常用账号工具一栏</a></li>
+                <li><a href="/tutorial/introMeeting">1.3 PM参加会议一览</a></li>
             </ul>
             <li><button onclick="expandLayer(this)">+</button> 2. 报告书写</li>
             <ul>
-                <li class="noBtn"><a href="/tutorial/ReportEfforts">2.1 Efforts Report</a></li>
-                <li class="noBtn"><a href="/tutorial/ReportRoyalty">2.2 Royalty Report</a></li>
-                <li class="noBtn"><a href="/tutorial/ReportPriority">2.3 Priority Report</a></li>
-                <li class="noBtn"><a href="/tutorial/ReportBRP">2.4 Business Review Presentation</a></li>
+                <li><a href="/tutorial/ReportEfforts">2.1 Efforts Report</a></li>
+                <li><a href="/tutorial/ReportRoyalty">2.2 Royalty Report</a></li>
+                <li><a href="/tutorial/ReportPriority">2.3 Priority Report</a></li>
+                <li><a href="/tutorial/ReportBRP">2.4 Business Review Presentation</a></li>
             </ul>
             <li><button onclick="expandLayer(this)">+</button><a href="/tutorial/product">3. 产品概览</a></li>
             <ul>
-                <li class="noBtn"><a href="/tutorial/productCodec">3.1 音视频解码器</a></li>
-                <li class="noBtn"><a href="/tutorial/productDTV">3.2 DTV Player</a></li>
-                <li class="noBtn"><a href="/tutorial/productDTV">3.3 Mirror&Sync</a></li>
-                <li class="noBtn"><a href="/tutorial/productDTV">3.4 Uni Tests for codec developers</a></li>
+                <li ><a href="/tutorial/productCodec">3.1 音视频解码器</a></li>
+                <li><button onclick="expandLayer(this)">+</button> <a href="/tutorial/productDTV">3.2 DTV Player</a></li>
+                <ul>
+                    <li><a href="/tutorial/productDTVPlan">3.2.1 Business Modes</a></li>
+                </ul>
+                <li ><a href="/tutorial/productMirror">3.3 Mirror&Sync</a></li>
+                <li><a href="/tutorial/productUnitests">3.4 Uni-tests for codec developers</a></li>
             </ul>
             <li><button onclick="expandLayer(this)">+</button> 4. 产品交付 </li>
             <ul>
-                <li class="noBtn">4.1 FTP账户的使用</li>
-                <li class="noBtn">4.2 应用市场上传</li>
+                <li>4.1 FTP账户的使用</li>
+                <li>4.2 应用市场上传</li>
                 <ul>
                     <li>4.2.1 中国应用宝上传</li>
                     <li>4.2.2 Google Play上传</li>
                     <li>4.2.3 ios上传</li>
                 </ul>
-                <li class="noBtn"><a href="/tutorial/deliveryshipment">4.3 产品的寄送</a></li>
+                <li><a href="/tutorial/deliveryshipment">4.3 产品的寄送</a></li>
                 <li><button onclick="expandLayer(this)">+</button> <a href="/tutorial/deliveryLicense">4.4 license的分发</a></li>
                 <ul>
                     <li><a href="/tutorial/deliveryuuid">4.4.1 通过UUID生成许可</a></li>
