--- a/public/css/general.css
+++ b/public/css/general.css
@@ -297,7 +297,7 @@ body{
 .singleLine{
     margin-left:2rem;
     text-overflow:ellipsis;
-    height:1rem;
+    height:1.5rem;
     word-break:break-word;
     overflow:hidden;
     -webkit-line-clamp: 1;  /* 设置超出多少行隐藏 */
@@ -385,4 +385,26 @@ body{
 
 .requirements td{
     border: solid 1px rgba(181,181,181,0.8);
+}
+
+.entry td{
+    line-height:1.5rem;
+    height:1.5rem;
+}
+
+#headerButtons{
+    margin:auto;
+    margin-right:2rem;
+    font-family:'Microsoft YaHei UI Light';
+    font-size:0.8rem;
+    display:flex;
+    flex-direction:row;
+    min-height:3rem;
+}
+
+#headerButtons >a{
+    margin-left:0.8rem;
+    margin-top:auto;
+    margin-bottom:0.2rem;
+
 }
