--- a/view/tutorial.html
+++ b/view/tutorial.html
@@ -79,6 +79,9 @@
                 </ul>
             </ul>
             <li><button onclick="expandLayer(this)">+</button> 5. 项目维护</li>
+            <ul>
+                <li><a href="/tutorial/maintenancePerformance">5.1 人员Performance评议</a></li>
+            </ul>
         </ul>
     </div>
     <div id="guideExpand" onclick="switchGuidePanel()">
