update the system to access fileserver

--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -48,9 +48,9 @@
 <div id="header">
     <div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana项目管理工具</div>
     <div id="headerButtons">
-        <a href="http://127.0.0.1:4000/doc" target="_blank">ASSET</a>
-        <a href="http://127.0.0.1:4000/account" target="_blank">ACCOUNT</a>
-        <a href="http://127.0.0.1:4000/tutorial" target="_blank">REFERENCE</a>
+        <a href="/doc" target="_blank">ASSET</a>
+        <a href="/account" target="_blank">ACCOUNT</a>
+        <a href="/tutorial" target="_blank">REFERENCE</a>
     </div>
 </div>
 <div id="main">
