--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -36,9 +36,9 @@
 <div id="header">
     <div style="margin-top:auto;margin-bottom:auto;margin-left:1.5rem;"><%- header %></div>
     <div id="headerButtons">
-        <a href="http://127.0.0.1:4000/doc" target="_blank">ASSET</a>
-        <a href="http://127.0.0.1:4000/account" target="_blank">ACCOUNT</a>
-        <a href="http://127.0.0.1:4000/tutorial" target="_blank">REFERENCE</a>
+        <a href="/doc" target="_blank">ASSET</a>
+        <a href="/account" target="_blank">ACCOUNT</a>
+        <a href="/tutorial" target="_blank">REFERENCE</a>
     </div>
 </div>
 <div id="statusBar"><a href="/" target="_self">首页</a> > 当前状态 > <span >{{project.status | status}}</span></div>
