--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -32,6 +32,7 @@
       ng-controller="rootCon">
 <info-receiver  ng-init="project = '<%= encodeURIComponent(JSON.stringify(contents)) %>';
                          users = '<%= encodeURIComponent(JSON.stringify(users)) %>';
+                         user = '<%= encodeURIComponent(JSON.stringify(user)) %>';
                          setting = '<%= encodeURIComponent(JSON.stringify(setting)) %>';"></info-receiver>
 <div id="header">
     <div style="margin-top:auto;margin-bottom:auto;margin-left:1.5rem;"><%- header %></div>
@@ -155,11 +156,7 @@
             </div>
         </div>
         <div style="display:flex;flex-direction:row;margin-top:2rem;">
-            <div style="margin-left:1rem;">提交人：</div>
-            <select ng-disabled="!updatable()"
-                    ng-options="user._id as user.name for user in managers"
-                    ng-model="commentSubmit.user">
-            </select>
+            <div style="margin-left:1rem;">提交人：{{userInfo.name}}</div>
             <div style="margin-left:4rem;">schedule：</div>
             <input ng-disabled="!updatable()" type="date" id="commentTime">
             <div style="margin-left:4rem;">status：</div>
