file upload in project info page

--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -20,6 +20,7 @@
     <script src="/js/dataManager.js"></script>
     <script src="/js/projectFilter.js"></script>
     <script src="/js/projectInfo.js"></script>
+    <script src="/js/projectInfoDocCon.js"></script>
     <script src="/js/projectInfoInfoCon.js"></script>
     <script src="/js/projectInfoAlertCon.js"></script>
     <script src="/js/projectInfoBugCon.js"></script>
